Fix banner bottom on small screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -512,9 +512,9 @@ main {
 }
 
 /* Fix the banner bottom on small screens */
-@media (max-width: 360px) {
+@media (max-width: 356px) {
     body {
-        margin-top: 130px !important;
+        margin-top: 125px !important;
     }
 }
 
